--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@myelophone/vite-plugin-purgecss",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "Vite plugin for removing unused CSS from generated bundles with PurgeCSS.",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -10,9 +10,7 @@
 			"require": "./dist/index.js"
 		}
 	},
-	"files": [
-		"./dist/*"
-	],
+	"files": ["./dist/*"],
 	"scripts": {
 		"prepare": "husky",
 		"prepublishOnly": "yarn build",
@@ -31,18 +29,10 @@
 		"self-update": "yarn set version berry"
 	},
 	"lint-staged": {
-		"./**/*.{js,ts,cjs,mjs}": [
-			"yarn lint:fix"
-		],
-		"./**/*.{js,ts,cjs,mjs,json}": [
-			"yarn format:fix"
-		]
+		"./**/*.{js,ts,cjs,mjs}": ["yarn lint:fix"],
+		"./**/*.{js,ts,cjs,mjs,json}": ["yarn format:fix"]
 	},
-	"keywords": [
-		"PurgeCSS",
-		"Vite",
-		"Vite Plugin"
-	],
+	"keywords": ["PurgeCSS", "Vite", "Vite Plugin"],
 	"peerDependencies": {
 		"vite": "^6"
 	},
