--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 			"require": "./dist/index.js"
 		}
 	},
-	"files": ["./dist/*"],
+	"files": [
+		"./dist/*"
+	],
 	"scripts": {
 		"prepare": "husky",
 		"prepublishOnly": "yarn build",
@@ -29,10 +31,18 @@
 		"self-update": "yarn set version berry"
 	},
 	"lint-staged": {
-		"./**/*.{js,ts,cjs,mjs}": ["yarn lint:fix"],
-		"./**/*.{js,ts,cjs,mjs,json}": ["yarn format:fix"]
+		"./**/*.{js,ts,cjs,mjs}": [
+			"yarn lint:fix"
+		],
+		"./**/*.{js,ts,cjs,mjs,json}": [
+			"yarn format:fix"
+		]
 	},
-	"keywords": ["PurgeCSS", "Vite", "Vite Plugin"],
+	"keywords": [
+		"PurgeCSS",
+		"Vite",
+		"Vite Plugin"
+	],
 	"peerDependencies": {
 		"vite": "^6"
 	},
@@ -40,9 +50,9 @@
 		"@types/node": "^22.13.9",
 		"@typescript-eslint/eslint-plugin": "^8.26.0",
 		"@typescript-eslint/parser": "^8.26.0",
-		"@vitest/coverage-v8": "^3.0.7",
-		"@vitest/ui": "^3.0.7",
-		"eslint": "^9.21.0",
+		"@vitest/coverage-v8": "^3.0.8",
+		"@vitest/ui": "^3.0.8",
+		"eslint": "^9.22.0",
 		"eslint-plugin-filenames": "^1.3.2",
 		"eslint-plugin-import": "^2.31.0",
 		"husky": "^9.1.7",
@@ -53,8 +63,8 @@
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.2",
 		"url": "^0.11.4",
-		"vite": "^6.2.0",
-		"vitest": "^3.0.7"
+		"vite": "^6.2.1",
+		"vitest": "^3.0.8"
 	},
 	"dependencies": {
 		"purgecss": "^7.0.2"
