--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@myelophone/vite-plugin-purgecss",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"description": "Vite plugin for removing unused CSS from generated bundles with PurgeCSS.",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -41,30 +41,28 @@
 	"keywords": [
 		"PurgeCSS",
 		"Vite",
-		"Vite Plugin"
+		"Vite Plugin",
+		"Nuxt"
 	],
-	"peerDependencies": {
-		"vite": "^6"
-	},
 	"devDependencies": {
-		"@types/node": "^22.15.3",
-		"@typescript-eslint/eslint-plugin": "^8.31.1",
-		"@typescript-eslint/parser": "^8.31.1",
-		"@vitest/coverage-v8": "^3.1.2",
-		"@vitest/ui": "^3.1.2",
+		"@types/node": "^22.15.17",
+		"@typescript-eslint/eslint-plugin": "^8.32.1",
+		"@typescript-eslint/parser": "^8.32.1",
+		"@vitest/coverage-v8": "^3.1.3",
+		"@vitest/ui": "^3.1.3",
 		"eslint": "^9.26.0",
 		"eslint-plugin-filenames": "^1.3.2",
 		"eslint-plugin-import": "^2.31.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.5.1",
+		"lint-staged": "^16.0.0",
 		"prettier": "^3.5.3",
 		"prettier-cli": "^0.1.0",
-		"rollup": "^4.40.1",
+		"rollup": "^4.40.2",
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.3",
 		"url": "^0.11.4",
-		"vite": "^6.3.4",
-		"vitest": "^3.1.2"
+		"vite": "^6.3.5",
+		"vitest": "^3.1.3"
 	},
 	"dependencies": {
 		"purgecss": "^7.0.2"
