--- a/package.json
+++ b/package.json
@@ -45,24 +45,25 @@
 		"Nuxt"
 	],
 	"devDependencies": {
-		"@types/node": "^22.15.19",
-		"@typescript-eslint/eslint-plugin": "^8.32.1",
-		"@typescript-eslint/parser": "^8.32.1",
-		"@vitest/coverage-v8": "^3.1.4",
-		"@vitest/ui": "^3.1.4",
-		"eslint": "^9.27.0",
+		"@biomejs/biome": "^1.9.4",
+		"@types/node": "^22.15.29",
+		"@typescript-eslint/eslint-plugin": "^8.33.1",
+		"@typescript-eslint/parser": "^8.33.1",
+		"@vitest/coverage-v8": "^3.2.1",
+		"@vitest/ui": "^3.2.1",
+		"eslint": "^9.28.0",
 		"eslint-plugin-filenames": "^1.3.2",
 		"eslint-plugin-import": "^2.31.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^16.0.0",
+		"lint-staged": "^16.1.0",
 		"prettier": "^3.5.3",
 		"prettier-cli": "^0.1.0",
-		"rollup": "^4.41.0",
+		"rollup": "^4.41.1",
 		"tsup": "^8.5.0",
 		"typescript": "^5.8.3",
 		"url": "^0.11.4",
 		"vite": "^6.3.5",
-		"vitest": "^3.1.4"
+		"vitest": "^3.2.1"
 	},
 	"dependencies": {
 		"purgecss": "^7.0.2"
@@ -75,7 +76,7 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": ">=23.0.0"
+		"node": ">=20.0.0"
 	},
-	"packageManager": "yarn@4.9.1"
+	"packageManager": "yarn@4.9.2"
 }
