chore: update dependencies

--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,11 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-	"organizeImports": {
-		"enabled": true
+	"$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "off"
+			}
+		}
 	},
 	"formatter": {
 		"enabled": true,
@@ -24,11 +28,20 @@
 			"a11y": {
 				"useKeyWithClickEvents": "off",
 				"noSvgWithoutTitle": "off",
-				"useButtonType": "off",
-				"useKeyWithMouseEvents": "off"
+				"useButtonType": "off"
 			},
 			"style": {
-				"noNonNullAssertion": "off"
+				"noNonNullAssertion": "off",
+				"noParameterAssign": "error",
+				"useAsConstAssertion": "error",
+				"useDefaultParameterLast": "error",
+				"useEnumInitializers": "error",
+				"useSelfClosingElements": "error",
+				"useSingleVarDeclarator": "error",
+				"noUnusedTemplateLiteral": "error",
+				"useNumberNamespace": "error",
+				"noInferrableTypes": "error",
+				"noUselessElse": "error"
 			},
 			"correctness": {
 				"useExhaustiveDependencies": "off"
@@ -42,7 +55,15 @@
 		"useIgnoreFile": false
 	},
 	"files": {
-		"ignore": ["dist/**", "*.cjs", "*.mjs", "*.d.ts", "node_modules/**", ".yarn/**"]
+		"includes": [
+			"**",
+			"!**/dist/**",
+			"!**/*.cjs",
+			"!**/*.mjs",
+			"!**/*.d.ts",
+			"!**/node_modules/**",
+			"!**/.yarn/**"
+		]
 	},
 	"javascript": {
 		"formatter": {
@@ -57,5 +78,20 @@
 		"formatter": {
 			"trailingCommas": "none"
 		}
-	}
+	},
+	"overrides": [
+		{
+			"includes": [
+				"**/*.vue"
+			],
+			"linter": {
+				"rules": {
+					"style": {
+						"useConst": "off",
+						"useImportType": "off"
+					}
+				}
+			}
+		}
+	]
 }
