--- a/.editorconfig
+++ b/.editorconfig
@@ -27,6 +27,19 @@ quote_type = single
 [*.bat]
 end_of_line = crlf
 
-[*.{yaml,yml}]
+[*.{yaml,yml,json,toml,xml}]
 indent_style = space
 indent_size = 2
+
+[*.cs]
+indent_style = space
+indent_size = 4
+dotnet_sort_system_directives_first = true
+dotnet_separate_import_directive_groups = true
+csharp_new_line_before_open_brace = all
+csharp_indent_case_contents = true
+csharp_indent_switch_labels = true
+
+[*.rs]
+indent_style = space
+indent_size = 4
