chore: update biome.json

--- a/biome.json
+++ b/biome.json
@@ -57,12 +57,12 @@
   "files": {
     "includes": [
       "**",
-      "!**/dist/**",
+      "!**/dist",
       "!**/*.cjs",
       "!**/*.mjs",
       "!**/*.d.ts",
-      "!**/node_modules/**",
-      "!**/.yarn/**"
+      "!**/node_modules",
+      "!**/.yarn"
     ]
   },
   "javascript": {
