--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myelophone/vite-plugin-purgecss",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Vite plugin for removing unused CSS from generated bundles with PurgeCSS.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -28,7 +28,8 @@
     "format:check": "yarn format --check",
     "format:fix": "yarn format --write",
     "update": "yarn upgrade-interactive",
-    "self-update": "yarn set version berry"
+    "self-update": "yarn set version berry",
+    "lock-update": "yarn dedupe --strategy highest"
   },
   "lint-staged": {
     "./**/*.{js,ts,cjs,mjs}": [
@@ -45,10 +46,10 @@
     "Nuxt"
   ],
   "devDependencies": {
-    "@biomejs/biome": "^2.2.3",
-    "@types/node": "^24.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.42.0",
-    "@typescript-eslint/parser": "^8.42.0",
+    "@biomejs/biome": "^2.2.4",
+    "@types/node": "^24.3.2",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.35.0",
@@ -62,7 +63,7 @@
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
     "url": "^0.11.4",
-    "vite": "^7.1.4",
+    "vite": "^7.1.5",
     "vitest": "^3.2.4"
   },
   "dependencies": {
